<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/close_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_close"

            android:layout_toEndOf="@id/close_icon"
        />

        <TextView
            android:id="@+id/cart_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/g_black"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_toEndOf="@id/close_icon"
            android:text="Address" />
    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/g_hint" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/location"
        android:layout_marginTop="50px"/>

    <EditText
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/full_name"
        android:layout_marginTop="50px"/>

    <EditText
        android:id="@+id/street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/street"
        android:layout_marginTop="50px"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/phone"
        android:layout_marginTop="50px"/>

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="city"
        android:layout_marginTop="50px"/>

    <EditText
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:hint="state"
        android:layout_marginTop="50px"/>

    <Button
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save"
        android:background="@color/g_hint"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

</LinearLayout>