<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_close"
        android:layout_toEndOf="@id/close_icon"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_box"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/complete"
        android:textColor="@color/g_black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/order_complete"
        android:textColor="@color/g_black"
        android:textSize="18sp"
        android:layout_marginBottom="150dp"/>

    <Button
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:id="@+id/checkoutButton"
        android:background="@color/g_hint"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

</LinearLayout>