<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300px"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_re"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:paddingBottom="30px"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="First Name"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="50px"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Last Name"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="50px"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="50px"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="50px"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="1000px"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="Register"
        android:background="@color/g_blue"
        android:textColor="@color/white"
        android:layout_marginTop="50px"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40px"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <Button
            android:layout_width="480px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/g_hint"
            android:text="@string/facebook"
            android:textColor="#ffffff"/>

        <FrameLayout
            android:layout_width="40px"
            android:layout_height="0px"
            />

        <Button
            android:layout_width="480px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/g_hint"
            android:text="@string/email"
            android:textColor="@color/white"
            android:elevation="10dp"/>

    </LinearLayout>

</LinearLayout>