<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/close_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_close"

        android:layout_toEndOf="@id/close_icon"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/payment"
            android:textColor="@color/g_black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sub_payment"
            android:textColor="@color/g_black"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/g_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shopping"
            android:textColor="@color/g_black"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_add"/>

    </LinearLayout>

    <Button
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white_btn"
        android:text="@string/home"
        android:textColor="@color/white"
        android:elevation="10dp"/>

    <View
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/g_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/test_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shirt"
                android:textColor="@color/g_black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text="$ 255"
                android:textColor="@color/black" />


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/g_hint" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="80dp"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginStart="16dp"
            android:text="Total: "
            android:textColor="@color/g_black"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginEnd="16dp"
            android:text="$500.0"
            android:textColor="@color/g_black"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:id="@+id/checkoutButton"
        android:background="@color/g_hint"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

</LinearLayout>